--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
   flutter: ">=2.0.0"
 
+publish_to: none
+
 dependencies:
   flutter:
     sdk: flutter
@@ -15,5 +17,10 @@ dependencies:
   device_info: ^2.0.0
   path: ^1.8.0
   path_provider: ^2.0.1
-  photo_manager: ^1.0.6
+  # photo_manager: ^1.0.6
+  # photo_manager: ^1.3.1
+  photo_manager:
+    git:
+      url: "https://github.com/luowanglin/flutter_photo_manager.git"
+      ref: "1.3.1.2"
   video_player: ^2.1.0
